--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
-title: Your awesome title
-author: GitHub User
+theme: minima
+title: Mike's Blog
+author: Mike
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ I'm just here to discuss life and all things that ara happening in my life.
+ 
+
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
